Add configuration for Sonatype OSS build/deployment